--- a/src/index.html
+++ b/src/index.html
@@ -4,36 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wired Bridge | Карьерный апгрейд и стратегии роста</title>
+  <title>Wired Bridge | Карьерный апгрейд</title>
   <meta name="description"
-    content="Инновационная платформа для построения карьеры. Консультации, стратегии и AI-инструменты для профессионального роста.">
+    content="Платформа для карьерного роста и инноваций. Консультации, стратегии, AI-инструменты.">
 
-  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2250%22 fill=%22%23CCFF00%22/></svg>"
+    type="image/svg+xml">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&family=Unbounded:wght@400;600;800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&family=Space+Grotesk:wght@300;500;700&display=swap"
     rel="stylesheet">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="./css/styles.css" />
+   
   </head>
-  <body class="page">
+  <body >
     <load src="./partials/header.html" />
 
-    <main class="main">
+    <main class="main" id="smooth-wrapper">
+      <div id="smooth-content">
       <!-- Loads the specified .html file -->
       <load src="./partials/main.html" />
+      </div>
     </main>
 
     <load src="./partials/footer.html" />
-<script src="https://unpkg.com/@studio-freight/lenis@1.0.29/dist/lenis.min.js"></script>
+    <div class="cookie-banner" id="cookieBanner">
+      <p>Этот сайт использует cookies для улучшения работы. <a href="./cookies.html">Подробнее</a></p>
+      <button class="btn btn--primary btn--small" id="acceptCookies">OK</button>
+    </div>
+<script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script type="module" src="./main.js"></script>
-    <script>
-      lucide.createIcons();
-    </script>
+<script>
+  lucide.createIcons();
+</script>
   </body>
 </html>
